2016-05-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (debug_pgets): New function to read a complete
	  line from a FILE*
	* common-src/file.h (debug_pgets, pgets): Add prototypes
	* common-src/amxml.c: Undo previous patch, use pgets instead of agets
	* application-src/amstar.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/senddiscover.c, client-src/sendsize.c,
	  common-src/amutil.c, common-src/krb5-security.c,
	  common-src/security-util.c, recover-src/extract_list.c,
	  server-src/amcheck.c, server-src/amindexd.c,
	  server-src/dumper.c: Use pgets instead of agets to read many files
	* installcheck/amdump.pl: Add check for '#' in dumptype property

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c (amxml_format_tag): The '#' character require raw
	  format

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg: Keep hash by label and barcode for faster
	  lookup
	* installcheck/Amanda_Tapelist.pl: Fix for new hash

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtrmidx.c: Fix

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (stop_dump): Call security_stream_read_cancel

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/find.c: Find the find result in a hash
	* server-src/find.h (hash_find_log, make_dump_hash, free_dump_hash,
	  dump_hash_exist): Add prototypes
	* server-src/amtrmidx.c, server-src/amtrmlog.c: Use the hash

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driverio.h (chunker_t, wtaper_t): sendresult is a
	  gboolean
	* server-src/driver.c: Fix sending the result to taper twice

2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda-scripts.7.xml: Add notes on how to abort a
	  backup with exit status != 0

2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>